--- a/Pet shop - back end 2/Pet shop - back end/frmSplash.resx
+++ b/Pet shop - back end 2/Pet shop - back end/frmSplash.resx
@@ -120,4 +120,191 @@
   <metadata name="timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="patinha1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAXFSURBVGhDzVpZiBxVFG1XXHDDfQFRERdc0LghituHIiqJ
+        OIIajThDVfWMYxISl49gQPDPRCMIQgS/VBg/jCBIxo926lV3RjJxpl9Vz0jQJC7EgCKOwSXR2J7bdbun
+        u+tWV72aNt0HDgNd955336v77ltqct2G5XuX5LW33Pa9F+yyt9opq8fpN37c56hWj6CAEfyU43tVkdrb
+        SZ0b3Tl5Mnv1F6zZiXMdX02IwQu0tfejrdWj7N4fGA4K5yCoPVLASYTfqyzTeyCYrVKQaWlpb5Sleoe8
+        Vkuk4EyINNs/+qV7Jkv2Bk6gRqTgjBmoFSzZG1BaiIGZUqs1LNl9WOXS1TTiSJ8XQcspe5fxowZQbm8R
+        AzNlULybJbsHe7p0ftwEtn31CZVaNq0Bv4+325kQ60qZ1iCW6w6olGLR+lZqsE40/A3e0MXskrO+KpwB
+        n4pkm0QM2Hxeu9ewVPeAIMekBiPECo3OnMZuuWfmvJMQ1GbwkGgvUv1gVdybWaIFq0ul45HKt8MuT6nt
+        6OJz6PBSGmg2iQelFCbdv9EGYzk+MDZ2FLvXYFc+vxTpt6nTW6Vyi05saB6IOuB7JwbjAzz/XfKl+GDj
+        2kHxEXaJgjZ5onMnarWR3SMIN47u0nrBoFF1/OK9NNps0oCli5ej8wWxjRgiez4bmf3idJZYAG3mJIck
+        YoTWskQmhBtN9YeknUw1Z01NncJSIWqjJhonMEzH51nGCEijZfD9p0XPmOpdlgsBUVs2TEntvdU+ZzqB
+        CgR89opaBkQm/T0y553HsrQAuvdIhibEYHy8fGbriSzZEfw2RB1jIj1ZNpdbOV04lXonGhpRbU9TJjOn
+        skCa3ywbAkGUJENTYrRnk3a0OAI/Lflmo/sky4ZAz16RDTNxByrKCSwdgTNTPCt2vTAgBm0+UrmsQN0m
+        GWdmh3WGsOhjQK1itr0NAnp2TLjyCk5ZqL0/06QYRvVn0b8ToY2/QywTBRYnP+K0CNqB+xhLx6JWaOja
+        SHsqseBodQA279F2iN1lQOxTUSArtXqJpVNhIAiOpbMQlWdUNos6WN/iWL56MDIf4oAJuEUMKCMR0LMs
+        fXhBu0spoKy0g9JNLJ0KNE+t8sT1TuA9BP8hehuIaSUm9QNGF3tIrUyHpBjuSHP6o4KATFiFtgsoNn8J
+        OiExP2DzPkr3Vewqg/ZK2XeibURVoZFlaRG0nYHdG+briToIrosdJKoEsqMZUVV+wVnkDpYVMTQzcdGi
+        3z42qizXCqoUooMJERxK7pUsKWJ9oXA0RlSL/oZEKj7BsgvAjy9LxqlIx1DtvS6dANtBE1fUyES1e321
+        eiRLh0AwH8rGSVT7rMC9j2US0c2dLzGSxkiLSckwgeOpbjeagIIyKOhkJqaEzdIh8Ea+lgxjiTdociqs
+        w9LeDaJedrYetfFGfhKMYqi+X8yXJ4xiUdbNwPYrV3Sk4y1jM23fHWa3BujWMLxMw2qMrQmt6rRS8+MW
+        IL2uxRv9TdI2IdqZFia7pyTjCLW3d8XuwnHslsv7xVsRmLhrRkPzCHgjOte4Zq2DRhLPzbfwDapfafBY
+        bgF4sEF2iLCRk1Qx0DE6G0h2DdL2HHyt/XJiqDx5AX7/CJ01ueUk7sIA3sgyraht1hIF1T66yqnZI23w
+        266oTTzxBvZgvbm/1mATKNXATXj2neTXYO0KSa2rxxALNLRZFGA237vS2iHZJBFtHEIwq1gmguFK8ULa
+        /aK6OeFZRK1BJ5+qpVHaTxC8fXgTDbbcAHJqtFy7QHxts40p0aH//6su3c7X/3uBLgmk/1wIL6blINOS
+        2mC53oG+b0jBmRHbmw7XRocH9G8bvtouB5ieSLFlrNg7YDIuSVN+O5EmNMv1FpavHkZlOSAFmYYoGoMs
+        1Xvkfe+usMbLwcYR68b+Qb3tbJbpD/AX3ncQYMqPN+og0mqA3fsPeX/bFQj0bRrtaPBhB8AtTqV4Hbt0
+        Abncf1kuLix4U6YqAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="patinha2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAABcVJREFUaEPNWlmIHFUUbVdccMN9AVERF1zQuCGK24ciKok4ghqNOENV9YxjEhKX
+        j2BA8M9EIwhCBL9UGD+MIEjGj3bqVXdGMnGmX1XPSNAkLsSAIo7BJdHYntt1u6e761ZXvZo23QcOA133
+        nnffq/vuW2py3Yble5fktbfc9r0X7LK32imrx+k3ftznqFaPoIAR/JTje1WR2ttJnRvdOXkye/UXrNmJ
+        cx1fTYjBC7S196Ot1aPs3h8YDgrnIKg9UsBJhN+rLNN7IJitUpBpaWlvlKV6h7xWS6TgTIg02z/6pXsm
+        S/YGTqBGpOCMGagVLNkbUFqIgZlSqzUs2X1Y5dLVNOJInxdByyl7l/GjBlBubxEDM2VQvJsluwd7unR+
+        3AS2ffUJlVo2rQG/j7fbmRDrSpnWIJbrDqiUYtH6VmqwTjT8Dd7QxeySs74qnAGfimSbRAzYfF6717BU
+        94Agx6QGI8QKjc6cxm65Z+a8kxDUZvCQaC9S/WBV3JtZogWrS6Xjkcq3wy5Pqe3o4nPo8FIaaDaJB6UU
+        Jt2/0QZjOT4wNnYUu9dgVz6/FOm3qdNbpXKLTmxoHog64HsnBuMDPP9d8qX4YOPaQfERdomCNnmicydq
+        tZHdIwg3ju7SesGgUXX84r002mzSgKWLl6PzBbGNGCJ7PhuZ/eJ0llgAbeYkhyRihNayRCaEG031h6Sd
+        TDVnTU2dwlIhaqMmGicwTMfnWcYISKNl8P2nRc+Y6l2WCwFRWzZMSe291T5nOoEKBHz2iloGRCb9PTLn
+        nceytAC690iGJsRgfLx8ZuuJLNkR/DZEHWMiPVk2l1s5XTiVeicaGlFtT1MmM6eyQJrfLBsCQZQkQ1Ni
+        tGeTdrQ4Aj8t+Waj+yTLhkDPXpENM3EHKsoJLB2BM1M8K3a9MCAGbT5SuaxA3SYZZ2aHdYaw6GNArWK2
+        vQ0CenZMuPIKTlmovT/TpBhG9WfRvxOhjb9DLBMFFic/4rQI2oH7GEvHolZo6NpIeyqx4Gh1ADbv0XaI
+        3WVA7FNRICu1eomlU2EgCI6lsxCVZ1Q2izpY3+JYvnowMh/igAm4RQwoIxHQsyx9eEG7SymgrLSD0k0s
+        nQo0T63yxPVO4D0E/yF6G4hpJSb1A0YXe0itTIekGO5Ic/qjgoBMWIW2Cyg2fwk6ITE/YPM+SvdV7CqD
+        9krZd6JtRFWhkWVpEbSdgd0b5uuJOgiuix0kqgSyoxlRVX7BWeQOlhUxNDNx0aLfPjaqLNcKqhSigwkR
+        HErulSwpYn2hcDRGVIv+hkQqPsGyC8CPL0vGqUjHUO29Lp0A20ETV9TIRLV7fbV6JEuHQDAfysZJVPus
+        wL2PZRLRzZ0vMZLGSItJyTCB46luN5qAgjIo6GQmpoTN0iHwRr6WDGOJN2hyKqzD0t4Nol52th618UZ+
+        EoxiqL5fzJcnjGJR1s3A9itXdKTjLWMzbd8dZrcG6NYwvEzDaoytCa3qtFLz4xYgva7FG/1N0jYh2pkW
+        JrunJOMItbd3xe7CceyWy/vFWxGYuGtGQ/MIeCM617hmrYNGEs/Nt/ANql9p8FhuAXiwQXaIsJGTVDHQ
+        MTobSHYN0vYcfK39cmKoPHkBfv8InTW55STuwgDeyDKtqG3WEgXVPrrKqdkjbfDbrqhNPPEG9mC9ub/W
+        YBMo1cBNePad5Ndg7QpJravHEAs0tFkUYDbfu9LaIdkkEW0cQjCrWCaC4UrxQtr9oro54VlErUEnn6ql
+        UdpPELx9eBMNttwAcmq0XLtAfG2zjSnRof//qy7dztf/e4EuCaT/XAgvpuUg05LaYLnegb5vSMGZEdub
+        DtdGhwf0bxu+2i4HmJ5IsWWs2DtgMi5JU347kSY0y/UWlq8eRmU5IAWZhigagyzVe+R9766wxsvBxhHr
+        xv5Bve1slukP8BfedxBgyo836iDSaoDd+w95f9sVCPRtGu1o8GEHwC1OpXgdu3QBudx/WS4uLHhTpioA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="patinha3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAABcVJREFUaEPNWlmIHFUUbVdccMN9AVERF1zQuCGK24ciKok4ghqNOENV9YxjEhKX
+        j2BA8M9EIwhCBL9UGD+MIEjGj3bqVXdGMnGmX1XPSNAkLsSAIo7BJdHYntt1u6e761ZXvZo23QcOA133
+        nnffq/vuW2py3Yble5fktbfc9r0X7LK32imrx+k3ftznqFaPoIAR/JTje1WR2ttJnRvdOXkye/UXrNmJ
+        cx1fTYjBC7S196Ot1aPs3h8YDgrnIKg9UsBJhN+rLNN7IJitUpBpaWlvlKV6h7xWS6TgTIg02z/6pXsm
+        S/YGTqBGpOCMGagVLNkbUFqIgZlSqzUs2X1Y5dLVNOJInxdByyl7l/GjBlBubxEDM2VQvJsluwd7unR+
+        3AS2ffUJlVo2rQG/j7fbmRDrSpnWIJbrDqiUYtH6VmqwTjT8Dd7QxeySs74qnAGfimSbRAzYfF6717BU
+        94Agx6QGI8QKjc6cxm65Z+a8kxDUZvCQaC9S/WBV3JtZogWrS6Xjkcq3wy5Pqe3o4nPo8FIaaDaJB6UU
+        Jt2/0QZjOT4wNnYUu9dgVz6/FOm3qdNbpXKLTmxoHog64HsnBuMDPP9d8qX4YOPaQfERdomCNnmicydq
+        tZHdIwg3ju7SesGgUXX84r002mzSgKWLl6PzBbGNGCJ7PhuZ/eJ0llgAbeYkhyRihNayRCaEG031h6Sd
+        TDVnTU2dwlIhaqMmGicwTMfnWcYISKNl8P2nRc+Y6l2WCwFRWzZMSe291T5nOoEKBHz2iloGRCb9PTLn
+        nceytAC690iGJsRgfLx8ZuuJLNkR/DZEHWMiPVk2l1s5XTiVeicaGlFtT1MmM6eyQJrfLBsCQZQkQ1Ni
+        tGeTdrQ4Aj8t+Waj+yTLhkDPXpENM3EHKsoJLB2BM1M8K3a9MCAGbT5SuaxA3SYZZ2aHdYaw6GNArWK2
+        vQ0CenZMuPIKTlmovT/TpBhG9WfRvxOhjb9DLBMFFic/4rQI2oH7GEvHolZo6NpIeyqx4Gh1ADbv0XaI
+        3WVA7FNRICu1eomlU2EgCI6lsxCVZ1Q2izpY3+JYvnowMh/igAm4RQwoIxHQsyx9eEG7SymgrLSD0k0s
+        nQo0T63yxPVO4D0E/yF6G4hpJSb1A0YXe0itTIekGO5Ic/qjgoBMWIW2Cyg2fwk6ITE/YPM+SvdV7CqD
+        9krZd6JtRFWhkWVpEbSdgd0b5uuJOgiuix0kqgSyoxlRVX7BWeQOlhUxNDNx0aLfPjaqLNcKqhSigwkR
+        HErulSwpYn2hcDRGVIv+hkQqPsGyC8CPL0vGqUjHUO29Lp0A20ETV9TIRLV7fbV6JEuHQDAfysZJVPus
+        wL2PZRLRzZ0vMZLGSItJyTCB46luN5qAgjIo6GQmpoTN0iHwRr6WDGOJN2hyKqzD0t4Nol52th618UZ+
+        EoxiqL5fzJcnjGJR1s3A9itXdKTjLWMzbd8dZrcG6NYwvEzDaoytCa3qtFLz4xYgva7FG/1N0jYh2pkW
+        JrunJOMItbd3xe7CceyWy/vFWxGYuGtGQ/MIeCM617hmrYNGEs/Nt/ANql9p8FhuAXiwQXaIsJGTVDHQ
+        MTobSHYN0vYcfK39cmKoPHkBfv8InTW55STuwgDeyDKtqG3WEgXVPrrKqdkjbfDbrqhNPPEG9mC9ub/W
+        YBMo1cBNePad5Ndg7QpJravHEAs0tFkUYDbfu9LaIdkkEW0cQjCrWCaC4UrxQtr9oro54VlErUEnn6ql
+        UdpPELx9eBMNttwAcmq0XLtAfG2zjSnRof//qy7dztf/e4EuCaT/XAgvpuUg05LaYLnegb5vSMGZEdub
+        DtdGhwf0bxu+2i4HmJ5IsWWs2DtgMi5JU347kSY0y/UWlq8eRmU5IAWZhigagyzVe+R9766wxsvBxhHr
+        xv5Bve1slukP8BfedxBgyo836iDSaoDd+w95f9sVCPRtGu1o8GEHwC1OpXgdu3QBudx/WS4uLHhTpioA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="patinha4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAABcVJREFUaEPNWlmIHFUUbVdccMN9AVERF1zQuCGK24ciKok4ghqNOENV9YxjEhKX
+        j2BA8M9EIwhCBL9UGD+MIEjGj3bqVXdGMnGmX1XPSNAkLsSAIo7BJdHYntt1u6e761ZXvZo23QcOA133
+        nnffq/vuW2py3Yble5fktbfc9r0X7LK32imrx+k3ftznqFaPoIAR/JTje1WR2ttJnRvdOXkye/UXrNmJ
+        cx1fTYjBC7S196Ot1aPs3h8YDgrnIKg9UsBJhN+rLNN7IJitUpBpaWlvlKV6h7xWS6TgTIg02z/6pXsm
+        S/YGTqBGpOCMGagVLNkbUFqIgZlSqzUs2X1Y5dLVNOJInxdByyl7l/GjBlBubxEDM2VQvJsluwd7unR+
+        3AS2ffUJlVo2rQG/j7fbmRDrSpnWIJbrDqiUYtH6VmqwTjT8Dd7QxeySs74qnAGfimSbRAzYfF6717BU
+        94Agx6QGI8QKjc6cxm65Z+a8kxDUZvCQaC9S/WBV3JtZogWrS6Xjkcq3wy5Pqe3o4nPo8FIaaDaJB6UU
+        Jt2/0QZjOT4wNnYUu9dgVz6/FOm3qdNbpXKLTmxoHog64HsnBuMDPP9d8qX4YOPaQfERdomCNnmicydq
+        tZHdIwg3ju7SesGgUXX84r002mzSgKWLl6PzBbGNGCJ7PhuZ/eJ0llgAbeYkhyRihNayRCaEG031h6Sd
+        TDVnTU2dwlIhaqMmGicwTMfnWcYISKNl8P2nRc+Y6l2WCwFRWzZMSe291T5nOoEKBHz2iloGRCb9PTLn
+        nceytAC690iGJsRgfLx8ZuuJLNkR/DZEHWMiPVk2l1s5XTiVeicaGlFtT1MmM6eyQJrfLBsCQZQkQ1Ni
+        tGeTdrQ4Aj8t+Waj+yTLhkDPXpENM3EHKsoJLB2BM1M8K3a9MCAGbT5SuaxA3SYZZ2aHdYaw6GNArWK2
+        vQ0CenZMuPIKTlmovT/TpBhG9WfRvxOhjb9DLBMFFic/4rQI2oH7GEvHolZo6NpIeyqx4Gh1ADbv0XaI
+        3WVA7FNRICu1eomlU2EgCI6lsxCVZ1Q2izpY3+JYvnowMh/igAm4RQwoIxHQsyx9eEG7SymgrLSD0k0s
+        nQo0T63yxPVO4D0E/yF6G4hpJSb1A0YXe0itTIekGO5Ic/qjgoBMWIW2Cyg2fwk6ITE/YPM+SvdV7CqD
+        9krZd6JtRFWhkWVpEbSdgd0b5uuJOgiuix0kqgSyoxlRVX7BWeQOlhUxNDNx0aLfPjaqLNcKqhSigwkR
+        HErulSwpYn2hcDRGVIv+hkQqPsGyC8CPL0vGqUjHUO29Lp0A20ETV9TIRLV7fbV6JEuHQDAfysZJVPus
+        wL2PZRLRzZ0vMZLGSItJyTCB46luN5qAgjIo6GQmpoTN0iHwRr6WDGOJN2hyKqzD0t4Nol52th618UZ+
+        EoxiqL5fzJcnjGJR1s3A9itXdKTjLWMzbd8dZrcG6NYwvEzDaoytCa3qtFLz4xYgva7FG/1N0jYh2pkW
+        JrunJOMItbd3xe7CceyWy/vFWxGYuGtGQ/MIeCM617hmrYNGEs/Nt/ANql9p8FhuAXiwQXaIsJGTVDHQ
+        MTobSHYN0vYcfK39cmKoPHkBfv8InTW55STuwgDeyDKtqG3WEgXVPrrKqdkjbfDbrqhNPPEG9mC9ub/W
+        YBMo1cBNePad5Ndg7QpJravHEAs0tFkUYDbfu9LaIdkkEW0cQjCrWCaC4UrxQtr9oro54VlErUEnn6ql
+        UdpPELx9eBMNttwAcmq0XLtAfG2zjSnRof//qy7dztf/e4EuCaT/XAgvpuUg05LaYLnegb5vSMGZEdub
+        DtdGhwf0bxu+2i4HmJ5IsWWs2DtgMi5JU347kSY0y/UWlq8eRmU5IAWZhigagyzVe+R9766wxsvBxhHr
+        xv5Bve1slukP8BfedxBgyo836iDSaoDd+w95f9sVCPRtGu1o8GEHwC1OpXgdu3QBudx/WS4uLHhTpioA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="patinha5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAABcVJREFUaEPNWlmIHFUUbVdccMN9AVERF1zQuCGK24ciKok4ghqNOENV9YxjEhKX
+        j2BA8M9EIwhCBL9UGD+MIEjGj3bqVXdGMnGmX1XPSNAkLsSAIo7BJdHYntt1u6e761ZXvZo23QcOA133
+        nnffq/vuW2py3Yble5fktbfc9r0X7LK32imrx+k3ftznqFaPoIAR/JTje1WR2ttJnRvdOXkye/UXrNmJ
+        cx1fTYjBC7S196Ot1aPs3h8YDgrnIKg9UsBJhN+rLNN7IJitUpBpaWlvlKV6h7xWS6TgTIg02z/6pXsm
+        S/YGTqBGpOCMGagVLNkbUFqIgZlSqzUs2X1Y5dLVNOJInxdByyl7l/GjBlBubxEDM2VQvJsluwd7unR+
+        3AS2ffUJlVo2rQG/j7fbmRDrSpnWIJbrDqiUYtH6VmqwTjT8Dd7QxeySs74qnAGfimSbRAzYfF6717BU
+        94Agx6QGI8QKjc6cxm65Z+a8kxDUZvCQaC9S/WBV3JtZogWrS6Xjkcq3wy5Pqe3o4nPo8FIaaDaJB6UU
+        Jt2/0QZjOT4wNnYUu9dgVz6/FOm3qdNbpXKLTmxoHog64HsnBuMDPP9d8qX4YOPaQfERdomCNnmicydq
+        tZHdIwg3ju7SesGgUXX84r002mzSgKWLl6PzBbGNGCJ7PhuZ/eJ0llgAbeYkhyRihNayRCaEG031h6Sd
+        TDVnTU2dwlIhaqMmGicwTMfnWcYISKNl8P2nRc+Y6l2WCwFRWzZMSe291T5nOoEKBHz2iloGRCb9PTLn
+        nceytAC690iGJsRgfLx8ZuuJLNkR/DZEHWMiPVk2l1s5XTiVeicaGlFtT1MmM6eyQJrfLBsCQZQkQ1Ni
+        tGeTdrQ4Aj8t+Waj+yTLhkDPXpENM3EHKsoJLB2BM1M8K3a9MCAGbT5SuaxA3SYZZ2aHdYaw6GNArWK2
+        vQ0CenZMuPIKTlmovT/TpBhG9WfRvxOhjb9DLBMFFic/4rQI2oH7GEvHolZo6NpIeyqx4Gh1ADbv0XaI
+        3WVA7FNRICu1eomlU2EgCI6lsxCVZ1Q2izpY3+JYvnowMh/igAm4RQwoIxHQsyx9eEG7SymgrLSD0k0s
+        nQo0T63yxPVO4D0E/yF6G4hpJSb1A0YXe0itTIekGO5Ic/qjgoBMWIW2Cyg2fwk6ITE/YPM+SvdV7CqD
+        9krZd6JtRFWhkWVpEbSdgd0b5uuJOgiuix0kqgSyoxlRVX7BWeQOlhUxNDNx0aLfPjaqLNcKqhSigwkR
+        HErulSwpYn2hcDRGVIv+hkQqPsGyC8CPL0vGqUjHUO29Lp0A20ETV9TIRLV7fbV6JEuHQDAfysZJVPus
+        wL2PZRLRzZ0vMZLGSItJyTCB46luN5qAgjIo6GQmpoTN0iHwRr6WDGOJN2hyKqzD0t4Nol52th618UZ+
+        EoxiqL5fzJcnjGJR1s3A9itXdKTjLWMzbd8dZrcG6NYwvEzDaoytCa3qtFLz4xYgva7FG/1N0jYh2pkW
+        JrunJOMItbd3xe7CceyWy/vFWxGYuGtGQ/MIeCM617hmrYNGEs/Nt/ANql9p8FhuAXiwQXaIsJGTVDHQ
+        MTobSHYN0vYcfK39cmKoPHkBfv8InTW55STuwgDeyDKtqG3WEgXVPrrKqdkjbfDbrqhNPPEG9mC9ub/W
+        YBMo1cBNePad5Ndg7QpJravHEAs0tFkUYDbfu9LaIdkkEW0cQjCrWCaC4UrxQtr9oro54VlErUEnn6ql
+        UdpPELx9eBMNttwAcmq0XLtAfG2zjSnRof//qy7dztf/e4EuCaT/XAgvpuUg05LaYLnegb5vSMGZEdub
+        DtdGhwf0bxu+2i4HmJ5IsWWs2DtgMi5JU347kSY0y/UWlq8eRmU5IAWZhigagyzVe+R9766wxsvBxhHr
+        xv5Bve1slukP8BfedxBgyo836iDSaoDd+w95f9sVCPRtGu1o8GEHwC1OpXgdu3QBudx/WS4uLHhTpioA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="patinha6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAABcVJREFUaEPNWlmIHFUUbVdccMN9AVERF1zQuCGK24ciKok4ghqNOENV9YxjEhKX
+        j2BA8M9EIwhCBL9UGD+MIEjGj3bqVXdGMnGmX1XPSNAkLsSAIo7BJdHYntt1u6e761ZXvZo23QcOA133
+        nnffq/vuW2py3Yble5fktbfc9r0X7LK32imrx+k3ftznqFaPoIAR/JTje1WR2ttJnRvdOXkye/UXrNmJ
+        cx1fTYjBC7S196Ot1aPs3h8YDgrnIKg9UsBJhN+rLNN7IJitUpBpaWlvlKV6h7xWS6TgTIg02z/6pXsm
+        S/YGTqBGpOCMGagVLNkbUFqIgZlSqzUs2X1Y5dLVNOJInxdByyl7l/GjBlBubxEDM2VQvJsluwd7unR+
+        3AS2ffUJlVo2rQG/j7fbmRDrSpnWIJbrDqiUYtH6VmqwTjT8Dd7QxeySs74qnAGfimSbRAzYfF6717BU
+        94Agx6QGI8QKjc6cxm65Z+a8kxDUZvCQaC9S/WBV3JtZogWrS6Xjkcq3wy5Pqe3o4nPo8FIaaDaJB6UU
+        Jt2/0QZjOT4wNnYUu9dgVz6/FOm3qdNbpXKLTmxoHog64HsnBuMDPP9d8qX4YOPaQfERdomCNnmicydq
+        tZHdIwg3ju7SesGgUXX84r002mzSgKWLl6PzBbGNGCJ7PhuZ/eJ0llgAbeYkhyRihNayRCaEG031h6Sd
+        TDVnTU2dwlIhaqMmGicwTMfnWcYISKNl8P2nRc+Y6l2WCwFRWzZMSe291T5nOoEKBHz2iloGRCb9PTLn
+        nceytAC690iGJsRgfLx8ZuuJLNkR/DZEHWMiPVk2l1s5XTiVeicaGlFtT1MmM6eyQJrfLBsCQZQkQ1Ni
+        tGeTdrQ4Aj8t+Waj+yTLhkDPXpENM3EHKsoJLB2BM1M8K3a9MCAGbT5SuaxA3SYZZ2aHdYaw6GNArWK2
+        vQ0CenZMuPIKTlmovT/TpBhG9WfRvxOhjb9DLBMFFic/4rQI2oH7GEvHolZo6NpIeyqx4Gh1ADbv0XaI
+        3WVA7FNRICu1eomlU2EgCI6lsxCVZ1Q2izpY3+JYvnowMh/igAm4RQwoIxHQsyx9eEG7SymgrLSD0k0s
+        nQo0T63yxPVO4D0E/yF6G4hpJSb1A0YXe0itTIekGO5Ic/qjgoBMWIW2Cyg2fwk6ITE/YPM+SvdV7CqD
+        9krZd6JtRFWhkWVpEbSdgd0b5uuJOgiuix0kqgSyoxlRVX7BWeQOlhUxNDNx0aLfPjaqLNcKqhSigwkR
+        HErulSwpYn2hcDRGVIv+hkQqPsGyC8CPL0vGqUjHUO29Lp0A20ETV9TIRLV7fbV6JEuHQDAfysZJVPus
+        wL2PZRLRzZ0vMZLGSItJyTCB46luN5qAgjIo6GQmpoTN0iHwRr6WDGOJN2hyKqzD0t4Nol52th618UZ+
+        EoxiqL5fzJcnjGJR1s3A9itXdKTjLWMzbd8dZrcG6NYwvEzDaoytCa3qtFLz4xYgva7FG/1N0jYh2pkW
+        JrunJOMItbd3xe7CceyWy/vFWxGYuGtGQ/MIeCM617hmrYNGEs/Nt/ANql9p8FhuAXiwQXaIsJGTVDHQ
+        MTobSHYN0vYcfK39cmKoPHkBfv8InTW55STuwgDeyDKtqG3WEgXVPrrKqdkjbfDbrqhNPPEG9mC9ub/W
+        YBMo1cBNePad5Ndg7QpJravHEAs0tFkUYDbfu9LaIdkkEW0cQjCrWCaC4UrxQtr9oro54VlErUEnn6ql
+        UdpPELx9eBMNttwAcmq0XLtAfG2zjSnRof//qy7dztf/e4EuCaT/XAgvpuUg05LaYLnegb5vSMGZEdub
+        DtdGhwf0bxu+2i4HmJ5IsWWs2DtgMi5JU347kSY0y/UWlq8eRmU5IAWZhigagyzVe+R9766wxsvBxhHr
+        xv5Bve1slukP8BfedxBgyo836iDSaoDd+w95f9sVCPRtGu1o8GEHwC1OpXgdu3QBudx/WS4uLHhTpioA
+        AAAASUVORK5CYII=
+</value>
+  </data>
 </root>
